Css modification for bug on safari

--- a/style/style.css
+++ b/style/style.css
@@ -87,6 +87,7 @@ h1 span{
 
 .pastille_ex{
     width: 40px;
+    height: 40px;
     cursor: pointer;
 }
 
